--- a/movieAndgame/src/main/resources/application.properties
+++ b/movieAndgame/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
+#database SET
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/jh1
+spring.datasource.username=JH1
+spring.datasource.password=123456
+
+#mybatis path SET
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
+
